[tool.poetry]
name = "stripe-traveller"
version = "0.1.0"
description = "Wraps the Test Clock object for easier async/await-based test functions."
authors = ["Tyler Eon"]
license = "GNU LGPL v2.1"

[tool.poetry.dependencies]
python = "^3.10"
stripe = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
